style.css
/* || Custom Variables */

:root {
    --clr-accent: #54E6AF;
    --clr-hover: #B3FFE2;
    --clr-white: #FFF;
    --clr-dark: #121725;
    --clr-dark-transparent: rgba(18, 23, 37, 0.9);

    --clr-dark-blue: #2C344B;
    --clr-med-blue: #5A668A;
    --clr-light-blue: #C2CBE5;
    --clr-error: #FB3E3E;

    --ff-chivo: 'Chivo', sans-serif;

    --fw-bold: 900;
    --fw-normal: 400;
}

/* || RESET */

html {
    box-sizing: border-box;
  }
  
  *, *:before, *:after {
    box-sizing: inherit;
  }
  
  body, h1, h2, h3, h4, h5, h6, p, ol, ul {
    margin: 0;
    padding: 0;
    font-weight: normal;
    font-size: 100%;
	font: inherit;
	vertical-align: baseline;
  }
  
  ol, ul {
    list-style: none;
  }
  
  img {
    max-width: 100%;
    height: auto;
  }

a {
    text-decoration: none;
}

/* || Global / Mobile */

html {
    min-height: 100%;
    background-image: url(assets/mobile/image-host.jpg);
    background-size: cover;
    box-shadow: inset 0 0 0 2000px var(--clr-dark-transparent);
}

body {
    display: flex;
    flex-direction: column;
    align-items: center;
    text-align: center;
    padding: 1.5rem;
    font-family: var(--ff-chivo);
}

.main-logo {
    margin: 2.5rem 0 3.5rem 0;
}

h1 {
    text-transform: uppercase;
    color: var(--clr-accent);
    font-size: 1.625rem;
    line-height: 2.375rem;
    font-weight: var(--fw-normal);
    margin-bottom: 1rem;
}

span {
    color: var(--clr-white);
}

p {
    color: var(--clr-med-blue);
    font-weight: var(--fw-normal);
    line-height: 1.6rem;
}

.div-dots {
    display: none;
}

/* reverse order of form & logos */
#flex {
    display: flex;
    flex-direction: column;
}

#logos { order: 1; }
#form { order: 2; }
/* ========= */

.section-logos {
    display: flex;
    justify-content: space-between;
    margin: 2rem 0 3rem 0;
    align-items: center;
}

